--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@ img {
  margin-right: 150px; " align="center" > 
 <img src= "fg.png" width = "138" height="92" align="left"> 
 <div style="text-align:right; color:brown ; font-family:" align="center" > &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href= "file:///C:/Users/ritti/Desktop/IT%20html/abtus.html" style="color:#694736";> About us </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href= "file:///C:/Users/ritti/Desktop/IT%20html/services.html" style="color:#694736";> Services </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href= "file:///C:/Users/ritti/Desktop/IT%20html/shop.html" style="color:#694736";> Shops </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href= "file:///C:/Users/ritti/Desktop/IT%20html/contact.html";> <img src= "16.png" width = "50" height="65"> </a> &nbsp;&nbsp;&nbsp;&nbsp;
+<a href= "abtus.html" style="color:#694736";> About us </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href= "services.html" style="color:#694736";> Services </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href= "shop.html" style="color:#694736";> Shops </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href= "contact.html";> <img src= "16.png" width = "50" height="65"> </a> &nbsp;&nbsp;&nbsp;&nbsp;
 </h1>
 
 <marquee width="100%" style="font-family:Merriweather; color:#694736; background-color:Beige; font-size:150%;"> Because they too deserve special treatment. </marquee>
