--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head> 
+  <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title> Pet Landig Page</title>
  <style>
 body 
@@ -14,8 +16,7 @@ img {
 
 }
         
-</style>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">   
+</style>  
 </head>
 
 <body style="background-color:#E7DFD8;"> 
