--- a/gromming.html
+++ b/gromming.html
@@ -54,7 +54,7 @@ Grooming </h2>
 
 <tr>
 <td>
-<a href= "bookNow.html";> <img src= "g1.png." width = "500" height="290" > </a>
+<a href= "bookNow.html";> <img src= "g1.png" width = "500" height="290" > </a>
 </td>
 
 <td>
