--- a/thp.html
+++ b/thp.html
@@ -57,6 +57,59 @@ img {
 
 </div>
 <br>
+<div style="text-align: center;">
+<div  align="center" style="position: relative; display: inline-block; margin-left: 150px;
+ margin-right: 150px; ">
+<img src= "lp.png" alt="My Image"> 
 
+<button style="position: absolute; top: 480px;  left: 100px; 
+background-color: #694736 ; /* brown */
+                   border: none;
+                   color: #694736;">  <a href= "https://www.instagram.com/furreverhappy?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==";> <img src= "ig2.png" width = "50" height="50" > 
+</a> </button>
+
+<button style="position: absolute; top: 480px; left: 160px;
+background-color: #694736 ; /* brown */
+                   border: none;">  <a href= "https://m.facebook.com/furreverhappy";> <img src= "fi2.png" width = "50" height="50" > 
+</a> </button>
+
+<button style="position: absolute; top: 480px; left: 220px;
+background-color: #694736 ; /* brown */
+                   border: none;">  <a href= "contact.html";> <img src= "ci2.png" width = "50" height="50" > 
+</a> </button>
+
+<button style="position: absolute; top: 440px; left: 740px;
+background-color: #694736 ; /* brown */
+border: none; ">
+<a href= "index.html"; style="color: #E7DFD8; font-size:200% ; font-family: Merriweather; text-align: left;"> Home </a> </button>
+
+<button style="position: absolute; top: 440px; left: 930px;
+background-color: #694736 ; /* brown */
+border: none;">
+<a href= "abtus.html"; style="color: #E7DFD8; font-size:200% ; font-family: Merriweather; text-align: left;"> About Us </a></button>
+
+<button style="position: absolute; top: 440px; left: 1140px;
+background-color: #694736 ; /* brown */
+border: none;">
+<a href= "contact.html"; style="color: #E7DFD8; font-size:200% ; font-family: Merriweather; text-align: left;"> Contact </a> </button>
+
+
+
+
+<button style="position: absolute; top: 520px; left: 740px;
+background-color: #694736 ; /* brown */
+border: none; ">
+<a href= "gromming.html"; style="color: #E7DFD8; font-size:200% ; font-family: Merriweather; text-align: left;"> Grooming </a> </button>
+
+<button style="position: absolute; top: 520px; left: 930px;
+background-color: #694736 ; /* brown */
+border: none;">
+<a href= "boarding.html"; style="color: #E7DFD8; font-size:200% ; font-family: Merriweather; text-align: left;"> Boarding </a></button>
+
+<button style="position: absolute; top: 520px; left: 1140px;background-color: #694736 ; /* brown */
+border: none;">
+<a href= "checkup.html"; style="color: #E7DFD8; font-size:200% ; font-family: Merriweather; text-align: left;" > Check Up </a> </button>
+</div>
+</div>
 </body>
 </html>
