--- a/bookNow.html
+++ b/bookNow.html
@@ -53,7 +53,7 @@ Enquirey </h2>
 
 
 
-<form action="thp.html" method="get" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
+<form action="thp.html" method="POST" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
 
             <label for="name">Your Name:</label>
             <input type="text" id="name" name="name" required>
