--- a/index.html
+++ b/index.html
@@ -70,17 +70,17 @@ img {
 <tr align="center">
 <td>
 <br>
-<a href= "gromming.html";> <img src= "gg.jpg" width = "220" height="330" align="center"> </a>
+<a href= "gromming.html";> <img src= "gg.jpg" width = "220" height="330" align="center" style="border-radius: 20px;"> </a>
  &nbsp; <p style="background-color:beige;font-size:150%"> &nbsp;&nbsp; Get your pets groomed with our trained experts.  &nbsp;&nbsp;&nbsp; </p> 
 </td>
 <td>
 <br>
-<a href= "checkup.html";> <img src= "cc.jpg" width = "220" height="330" align="center" > </a>
+<a href= "checkup.html";> <img src= "cc.jpg" width = "220" height="330" align="center" style="border-radius: 20px;"> </a>
 <p style="background-color:beige;font-size:150%"> &nbsp;&nbsp; Get them treated with the Best Vet on board.  &nbsp;&nbsp;&nbsp;</p>
 </td>
 <td>
 <br>
-<a href= "boarding.html";> <img src= "bb.jpg" width = "220" height="330" align="center"> </a>
+<a href= "boarding.html";> <img src= "bb.jpg" width = "220" height="330" align="center" style="border-radius: 20px;"> </a>
 <p style="background-color:Beige;font-size:150%;">  &nbsp;&nbsp; We'll take care of your pet while you're away. &nbsp;&nbsp;&nbsp;</p> 
 </td>
 </tr>
@@ -105,24 +105,24 @@ img {
 
 <button style="position: absolute; top: 600px; left: 60px;
 background-color: #D6D4C2 ;border: none;color: #D6D4C2;"> 
-<a href= "https://www.instagram.com/furreverhappy?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==";> <img src= "igi1.png" width = "50" height="50" > 
+<a href= "https://www.instagram.com/furreverhappy?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==";> <img src= "igi1.png" width = "50" height="50" style="border-radius: 20px;" > 
 </a> </button>
 
 <button style="position: absolute; top: 600px; left: 120px;
 background-color: #D6D4C2 ;border: none;color: #D6D4C2;"> 
-<a href= "https://m.facebook.com/furreverhappy";> <img src= "fi11.png" width = "50" height="50" > 
+<a href= "https://m.facebook.com/furreverhappy";> <img src= "fi11.png" width = "50" height="50" style="border-radius: 20px;"> 
 </a> </button>
 
 <button style="position: absolute; top: 600px; left: 180px;
 background-color: #D6D4C2 ;border: none;color: #D6D4C2;"> 
-<a href= "contact.html";> <img src= "ci1.png" width = "50" height="50" > 
+<a href= "contact.html";> <img src= "ci1.png" width = "50" height="50" style="border-radius: 20px;" > 
 </a> </button>
 </div>
 </div>
 
 <div align="center" style="margin-left: 150px;
  margin-right: 150px;" >
-<img src= "des.png" alt="My Image" > 
+<img src= "des.png" alt="My Image" style="border-radius: 20px;" > 
 </div>
 
 <div align="center" >
@@ -134,22 +134,22 @@ background-color: #D6D4C2 ;border: none;color: #D6D4C2;">
 <div align="center" >
 <br>
 
-&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;<video width="225px" height="400px" controls="controls"/> 
+&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;<video style="border-radius: 20px;" width="225px" height="400px" controls="controls"/> 
 <source src="re1.mp4" type="video/mp4"> 
 </video> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 
-&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<video width="225px" height="400px" controls="controls"/> 
+&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<video style="border-radius: 20px;" width="225px" height="400px" controls="controls"/> 
 <source src="re2.mp4" type="video/mp4"> 
 </video> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; <video width="225px" height="400px" controls="controls"/> 
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; <video style="border-radius: 20px;" width="225px" height="400px" controls="controls"/> 
 <source src="re3.mp4" type="video/mp4"> 
 </video> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <video width="225px" height="400px" controls="controls"/> 
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <video style="border-radius: 20px;" width="225px" height="400px" controls="controls"/> 
 <source src="re4.mp4" type="video/mp4"> 
 </video> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <br>
