--- a/services.html
+++ b/services.html
@@ -62,17 +62,17 @@ img {
 <tr align="center">
 <td>
 <br>
-<a href= "gromming.html";> <img src= "gg.jpg" width = "220" height="330" align="center"> </a>
+<a href= "gromming.html";> <img src= "gg.jpg" width = "220" height="330" align="center" style="border-radius: 20px;" > </a>
  &nbsp; <p style="background-color:beige;font-size:150%"> &nbsp;&nbsp;Get your pets groomed with our trained experts.  &nbsp;&nbsp;&nbsp; </p> 
 </td>
 <td>
 <br>
-<a href= "checkup.html";> <img src= "cc.jpg" width = "220" height="330" align="center" > </a>
+<a href= "checkup.html";> <img src= "cc.jpg" width = "220" height="330" align="center" style="border-radius: 20px;" > </a>
 <p style="background-color:beige;font-size:150%"> &nbsp;&nbsp; Get them treated with the Best Vet on borad.  &nbsp;&nbsp;&nbsp;</p>
 </td>
 <td>
 <br>
-<a href= "boarding.html";> <img src= "bb.jpg" width = "220" height="330" align="center"> </a>
+<a href= "boarding.html";> <img src= "bb.jpg" width = "220" height="330" align="center" style="border-radius: 20px;" > </a>
 <p style="background-color:Beige;font-size:150%;">  &nbsp;&nbsp; We'll take care of your pet while you're away. &nbsp;&nbsp;&nbsp;</p> 
 </td>
 </tr>
