--- a/checkup.html
+++ b/checkup.html
@@ -55,15 +55,15 @@ Check Up </h2>
 <tr align="center;">
 
 <td>
-<a href= "bookNow.html";> <img src= "ct.jpg" width = "400" height="220" > </a>
+<a href= "bookNow.html";> <img src= "ct.jpg" width = "400" height="180" style="border-radius: 20px;" > </a>
 </td>
 
 <td>
-<a href= "bookNow.html";> <img src= "vt.jpg" width = "400" height="220" > </a>
+<a href= "bookNow.html";> <img src= "vt.jpg" width = "400" height="220" style="border-radius: 20px;" > </a>
 </td>
 
 <td>
-<a href= "bookNow.html";> <img src= "ht.jpg" width = "400" height="220" > </a>
+<a href= "bookNow.html";> <img src= "ht.jpg" width = "400" height="220" style="border-radius: 20px;" > </a>
 </td>
 
 </tr>
