--- a/checkup.html
+++ b/checkup.html
@@ -55,7 +55,7 @@ Check Up </h2>
 <tr align="center;">
 
 <td>
-<a href= "bookNow.html";> <img src= "ct.jpg" width = "400" height="180" style="border-radius: 20px;" > </a>
+<a href= "bookNow.html";> <img src= "ct1.jpg" width = "400" height="220" style="border-radius: 20px;" > </a>
 </td>
 
 <td>
